tests/negative/neg_try_send_success_not_boolean.safe
-- Test: neg_try_send_success_not_boolean
-- Description: try_send success variables must have type Boolean.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p25:961abe5a
-- Expected: REJECT source_frontend_error

package Try_Send_Success_Not_Boolean_Test is

   type Item is range 0 to 10;

   channel Data_Ch : Item capacity 1;

   task Worker is
      Value   : Item = 0;
      Success : Natural = 0;
   begin
      loop
         try_send Data_Ch, Value, Success;
      end loop;
   end Worker;

end Try_Send_Success_Not_Boolean_Test;
